[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.0"
anyhow = "1.0.100"
db = { path = "../db" }
dotenvy = "0.15.7"
jsonwebtoken = {version = "10.2.0", features = ["rust_crypto"]}
serde = {version = "1.0.228", features = ["derive"]}
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["serde", "v4"] }
