[package]
name = "ws"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web-actors = "4.3.1"
actix = "0.13"

actix-web = { version = "4.8.0", features = ["ws"] }
actix-http = { version = "3.11.0", features = ["ws"] }
uuid = { version = "1.6", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"